fix the overflow bug

--- a/danmu0/css1.css
+++ b/danmu0/css1.css
@@ -13,6 +13,7 @@ body{
 	margin: 25px auto;
 	border: 1px solid black;
 	position: relative;
+	overflow: hidden;
 }
 #control{
 	width: 40%;
